# flask-react-sample-app

./: .gitignore  README.md  Tutorial.md  cypress.config.js  package-lock.json  package.json
.github/workflows/: main.yml
backend/: app.py  requirements.txt
client/: .env.example  cypress.config.js  package-lock.json  package.json
client/cypress/e2e/: home_page_spec.cy.js
client/cypress/support/: commands.js
client/src/: App.css  index.js
client/src/components/: Home.js  Login.js  Profile.js
cypress/e2e/: home-page_spec.cy.js
frontend/: package-lock.json  package.json
frontend/descope-flask/: package-lock.json
frontend/descope-flask/src/: App.css  App.js
frontend/descope-flask/src/components/: Login.js  Profile.js
frontend/public/: index.html
frontend/src/: App.css  App.js  index.js
frontend/src/components/: Dashboard.js  Home.js  Login.js  Profile.js  ProtectedRoute.js
server/: .env.example  Makefile  app.py  pyproject.toml  requirements.txt
server/server/: app.py
