[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Eric Sheen <eric@descope.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
descope = "^1.5.5"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
